--- a/RevisionPages/Computation.html
+++ b/RevisionPages/Computation.html
@@ -3,7 +3,7 @@
 
 <head>
   <link type="text/css" href="../css/style.css" rel="stylesheet" />
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body class="Computation">
