Finished RevisionPages>Programming>Recursion>Recursion>Recursion...

--- a/RevisionPages/Programming.html
+++ b/RevisionPages/Programming.html
@@ -73,77 +73,61 @@
 
       <div class="row text-center">
         <div class="col-md-12">
-          <h2>Object Oriented Programming - Inheritance</h2>
+          <h2>Recursion</h2>
           <p>
-            <h3>Inheritance allows classes to extend features and properties from others</h3>
+            <h3>Recursion is when a function calls itself</h3>
             <ul class="row text-left">
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
+              <h4 style="background-color:#f9ce36">Principles of recursion:</h4>
+              <li>Recursion can be used in place of a loop</li>
+              <li>There is usually an explicit stopping condition called the <b>base case</b></li>
+              <li>The base case should be reached after a finite number of function calls</li>
+              <li>If a subroutine is called too many times, it can cause a <b>stack overflow</b> error</li>
+              <li>Systems handling recursion require substantial amounts of memory</li>
+              <li>However, recursive programs are often shorter than non-recursive equivalents</li>
             </ul>
-            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
-            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
-            force will need to know if new recruits have any previous criminal convictions.
+            <img src='../img/recursion.png'>
           </p>
+          <p class="paragraph-small">
+          Above shows two iterations of a factiorial program written in javascript. The first uses iteration
+          in the form of a for-loop; the second uses recursion. While both accomplish the same task, the
+          second is significantly shorter. While the system must store more data in memory, this allows
+          for a simpler program.
+        </p>
         </div>
+
+      </div>
+
 
       </div>
     </div>
   </section>
   <section class="color-white " id="work-sec">
     <div class="container">
-
-      <div class="row text-center">
-        <div class="col-md-8 col-md-offset-2 ">
-          <h2>Types of Languages</h2>
-
-          <h3>The Regulation of Investigatory Powers Act was passed in 2000.</h3> The main purpose of this act is to provide restraints for security services and the police when investigating and surveying digital data and communications of individuals. The act also makes it a crime for anyone unauthorised by the act to
-          carry out surveilance and monitoring of communicatons. The European Court of Human Rights stated that UK surveillance laws were unclear and that there was nothing in place to prevent abuses of power by organisations regarding the interception
-          of electronic communications. It was decided that UK surveillance laws and practice must be tighter in order to protect the individual's rights to privacy. As a result, the act was passed.
-          <p>
-            <p> The idea behind allowing these organisations to intercept and monitor comunications is to achieve the following:
-              <ul class="row text-left">
-                <li>Prevent or detect crimes</li>
-                <li>Prevent public disorder from occurring</li>
-                <li>To ensure national security and the safety of the general public</li>
-                <li>To investigate or detect any abnormal or illegal use of telecommunication systems.</li>
-              </ul>
-        </div>
-      </div>
-      <div class="row text-center g-pad-bottom">
-        <div class="col-md-4">
-        </div>
+            <div class="row text-center">
+              <div class="col-md-12">
+                <h2>Object Oriented Programming - Inheritance</h2>
+                <p>
+                  <h3>Inheritance allows classes to extend features and properties from others</h3>
+                  <ul class="row text-left">
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                  </ul>
+                  The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
+                  the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
+                  force will need to know if new recruits have any previous criminal convictions.
+                </p>
+              </div>
+            </div>
+          </div>
   </section>
   <section class=" color-light">
     <div class="container">
-
-      <div class="row text-center">
-        <div class="col-md-12">
-          <h2>Recursion</h2>
-          <p>
-            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-            <ul class="row text-left">
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-              <li>Placeholder text</li>
-            </ul>
-            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
-            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
-            force will need to know if new recruits have any previous criminal convictions.
-          </p>
-        </div>
-
-      </div>
     </div>
   </section>
   </div>
