Cleaned up index, Added "Trees and Graphs" Section

--- a/RevisionPages/Computation.html
+++ b/RevisionPages/Computation.html
@@ -31,28 +31,57 @@
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2 ">
           <h2 style="padding-top:50px;">Trees and Graphs</h2>
-
-          <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
-                </a>
           <p>
-            <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
-                    The act makes it illegal to carry out any of the following:</h3>
+            <h3>Trees and graphs are methods of portraying data structures - They consist of <b>nodes</b>, joined by <b>edges</b></h3>
           </p>
-          <ol class="row text-left">
-            <li>Unauthorised access to computer material</li>
-            <li>Unauthorised access with intent to commit or facilitate a crime</li>
-            <li>Unauthorised modification of computer material</li>
-            <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
-          </ol>
-          <p class="spacing-small">
-            The act works in tiers, so each act has more severe consequences than the last. For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br> Before 1990, there was no protection
-            against data theft or modification, meaning there was nothing that could be done <br> to punish cyber criminals. This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn
-            more.
-          </p>
+          <div id="container">
+            <div id="first">
+              <ul style="padding-left: 5%;padding-right: 5%">
+                <h4 style="background-color:#6bb6e8">Key features of trees</h4>
+                <li>Contain one root node, all other nodes have a <b>parent</b></li>
+                <li>Unless the tree is explicitly binary, each node can have any number of <b>child nodes</b></li>
+                <li>Nodes with no children are referred to as <b>leaf nodes</b></li>
+                <li><b>Circuits</b> are not allowed, as edges have a single direction</li>
+                <img src="../img/Tree.png"style="width:70%">
+                <p>
+              </ul>
 
+            </div>
+            <div id="second">
+              <ul style="padding-left: 5%;padding-right: 5%">
+                <h4 style="background-color:#6bb6e8">Key features of graphs</h4>
+                <li>Contain no root node or unique  start points</li>
+                <li>Edges can have one, two or no direction at all</li>
+                <li>Each node must have at least one connection</li>
+                <li><b>Circuits</b> are allowed, as multiple paths can exist to one node</li>
+                <img src="../img/graph.png" style="width:70%">
+                <p>
+              </ul>
+          </div>
         </div>
+          <p class="spacing-small">
+            Graphs can be divided into two categories - Directed and undirected.
+            Directed graphs have direction (in the form of arrows) showing the
+            path to take. Undirected graphs do not have this propterty, meaning
+            there is no outlined path. Trees can be referred to as <b>minimally
+            connected directed graphs</b> with only one path from the root node
+            to any other node. This works because trees come under the over-arching
+            title of graphs.
+          </p>
+        </div>
+        <hr width="75%">
+        <h3>Tree Traversal</h3>
+        <div id=first>
+          <img src="../img/PostOrder.png" style="width:50%">
+          <img src="../img/InOrder.png" style="width:50%">
+        </div>
+      <div id=second>
+          <img src="../img/LevelOrder.png" style="width:50%">
+          <img src="../img/PreOrder.png" style="width:50%">
       </div>
+      </div>
+      <p><br>.</p>
+
     </div>
   </section>
   <section class=" color-light">
@@ -130,35 +159,6 @@
           </p>
         </div>
 
-      </div>
-    </div>
-  </section>
-  <section class="color-white " id="about">
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-8 col-md-offset-2 ">
-          <h2 style="padding-top:50px;">Computational Methods</h2>
-
-          <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
-                </a>
-          <p>
-            <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
-                    The act makes it illegal to carry out any of the following:</h3>
-          </p>
-          <ol class="row text-left">
-            <li>Unauthorised access to computer material</li>
-            <li>Unauthorised access with intent to commit or facilitate a crime</li>
-            <li>Unauthorised modification of computer material</li>
-            <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
-          </ol>
-          <p class="spacing-small">
-            The act works in tiers, so each act has more severe consequences than the last. For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br> Before 1990, there was no protection
-            against data theft or modification, meaning there was nothing that could be done <br> to punish cyber criminals. This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn
-            more.
-          </p>
-
-        </div>
       </div>
     </div>
   </section>
