--- a/RevisionPages/index.html
+++ b/RevisionPages/index.html
@@ -33,15 +33,16 @@
           </a>
           <p>
             <h3>This set of webpages was created to help summarise content on the A2 Computer Science specification for OCR<p>
-                The content is split into topics which can be viewed via the navbar at the top. The sections are as follows:</h3>
+                </h3>
           </p>
           <div class="container">
-            <ul>
+            <ul style="padding-left: 15%;padding-right: 15%">
+              <h4 style="background-color:#4d4d4d">The content is split into topics which can be viewed via the navbar at the top. The sections are as follows:</h4>
               <li>Processing -> GPUs, Pipelining, Parallel Processing</li>
               <li>Systems -> Database Normalisations and Transactions</li>
               <li>Programming -> OOP Fundamentals, Inheritance, Types of Languages, Recursion</li>
               <li>Development -> Stages of Compilation</li>
-              <li>Data -> Floating Pint Arithmetic, Advanced Boolean Algebra, Boolean Applications</li>
+              <li>Data -> Floating Point Arithmetic, Advanced Boolean Algebra, Boolean Applications</li>
               <li>Computation -> Trees and Graphs, Advanced Sorts, Path Finding, Algorithms and Efficiency, Computational Methods</li>
               <li>Connectivity -> Compression, Network Security, Encryption and Hashing, Web Technologies</li>
             </ul>
