Embedded a video into the gallery

--- a/index.html
+++ b/index.html
@@ -415,37 +415,12 @@ public class GuessingNumberGame {
 						<li>
 							<figure>
 								<div>
-									<img src="https://i.imgur.com/vupyZy9.png" alt="One of my teamspeak servers">
-								</div>
-								<figcaption>
-									<h3>Teamspeak</h3>
-									<span>A server I host</span>
-									<a href="https://i.imgur.com/vupyZy9.png">Take a look</a>
-								</figcaption>
-							</figure>
-						</li>
-
-						<li>
-							<figure>
-								<div>
 									<img src="https://i.imgur.com/Kl4iK0a.png" alt="HTML course">
 								</div>
 								<figcaption>
 									<h3>Sololearn</h3>
 									<span>HTML Course</span>
 									<a href="https://i.imgur.com/Kl4iK0a.png">Take a look</a>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								<div>
-									<img src="https://i.imgur.com/zgQBH2C.png" alt="Codecademy">
-								</div>
-								<figcaption>
-									<h3>Java & CSS</h3>
-									<span>Completed codecademy courses</span>
-									<a href="https://www.codecademy.com/JamesMcnicholas">Take a look</a>
 								</figcaption>
 							</figure>
 						</li>
@@ -462,6 +437,22 @@ public class GuessingNumberGame {
 								</figcaption>
 							</figure>
 						</li>
+
+						<li>
+							<figure>
+								<div>
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/Bun7_WzAA40" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+								</div>
+								<figcaption>
+									<h3>Simple Player</h3>
+									<span>An innovative music player created with java</span>
+									<a href="https://github.com/jmcnicholas62743">Take a look</a>
+								</figcaption>
+							</figure>
+						</li>
+
+
+
 					</ul>
 				</div>
 			</div>
