--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ public class GuessingNumberGame {
 						<li>
 							<figure>
 								<div>
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/Bun7_WzAA40" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+									<iframe src="https://drive.google.com/file/d/1Y1zq6XFWR9LWcs1d9ACZTvf6vccPdXy6/preview" width="640" height="480"></iframe>
 								</div>
 								<figcaption>
 									<h3>Simple Player</h3>
