--- a/index.html
+++ b/index.html
@@ -440,8 +440,13 @@ public class GuessingNumberGame {
 
 						<li>
 							<figure>
-								<div>
-									<iframe src="https://drive.google.com/file/d/1GP-Tz2y2ghP7noMv9mG2KxJ3Xxlb-eQv/preview" width="1280" height="720"></iframe>
+								<div onclick="this.nextSibling.style.display='block'; this.style.display='none'"><img src="https://img.youtube.com/vi/ZmSSK5zJN6w/maxresdefault.jpg" style="cursor:pointer" /></div><div style="display:none">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/ZmSSK5zJN6w?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+								<object width="425" height="344"><param name="movie" value="h**p://youtube.com/v/ZmSSK5zJN6w&hl=en&fs=1&autoplay=1"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="h**p://youtube.com/v/jxXukpxNSx4&hl=en&fs=1&autoplay=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="344"></embed></object>
+
+									<!-- End Embed code -->
+
 								</div>
 								<figcaption>
 									<h3>Simple Player</h3>
