Added notes for Programming > Inheritance, updated date

--- a/RevisionPages/Development.html
+++ b/RevisionPages/Development.html
@@ -107,7 +107,7 @@
     </div>
   </section>
   </div>
-  <h4 align="right">James McNicholas 2017</h4>
+  <h4 align="right">James McNicholas 2017-2018</h4>
 </body>
 
 </html>
