--- a/RevisionPages/Programming.html
+++ b/RevisionPages/Programming.html
@@ -77,7 +77,7 @@
           <p>
             <h3>Recursion is when a function calls itself</h3>
             <ul class="row text-left">
-              <h4 style="background-color:#f9ce36">Principles of recursion:</h4>
+              <h4 style="background-color:#f9ce36">Principles of recursion</h4>
               <li>Recursion can be used in place of a loop</li>
               <li>There is usually an explicit stopping condition called the <b>base case</b></li>
               <li>The base case should be reached after a finite number of function calls</li>
@@ -107,20 +107,17 @@
               <div class="col-md-12">
                 <h2>Object Oriented Programming - Inheritance</h2>
                 <p>
+                  <img src=../img/4OOP.png align="text-center">
                   <h3>Inheritance allows classes to extend features and properties from others</h3>
                   <ul class="row text-left">
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
-                    <li>Placeholder text</li>
+                    <h4 style="background-color:#f9ce36"> Key points about inheritance</h4>
+                    <li>Classes can acquire methods and attributes from other classes using inheritance</li>
+                    <li><b>Subclasses</b> inherit properties from <b>superclasses</b></li>
+                    <li>When methods are <b>overridden</b> a version of that method replaces the inherited method</li>
+                    <li><b>Overloading</b> is when different versions of a method with the same name exist to accept different parameters</li>
+                    <li><b>Polymorphism</b> describes different behaviour in different contexts due to <b>overriding and overloading</b></li>
+                    <li><b>Abstract</b> classes cannot be instantiated, they represent ideas to be inherited by other classes</li>
                   </ul>
-                  The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
-                  the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
-                  force will need to know if new recruits have any previous criminal convictions.
                 </p>
               </div>
             </div>
@@ -131,7 +128,7 @@
     </div>
   </section>
   </div>
-  <h4 align="right">James McNicholas 2017</h4>
+  <h4 align="right">James McNicholas 2017-2018</h4>
 </body>
 
 </html>
