--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ public class GuessingNumberGame {
 						<li>
 							<figure>
 								<div onclick="this.nextSibling.style.display='block'; this.style.display='none'"><img src="https://img.youtube.com/vi/ZmSSK5zJN6w/maxresdefault.jpg" style="cursor:pointer" /></div><div style="display:none">
-									<iframe width="560" height="315" src="https://www.youtube.com/embed/ZmSSK5zJN6w?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/ZmSSK5zJN6w?rel=0&amp;showinfo=0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true"></iframe>
 								</div>
 								<figcaption>
 									<h3>Simple Player</h3>
@@ -452,9 +452,6 @@ public class GuessingNumberGame {
 						</li>
 						<li>
 						</li>
-
-
-
 					</ul>
 				</div>
 			</div>
