--- a/RevisionPages/Systems.html
+++ b/RevisionPages/Systems.html
@@ -74,7 +74,7 @@
         <div class="col-md-12">
           <h2>Database Transactions</h2>
           <p>
-            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
+            <h3>SQL queries can be expanded with the following content:</h3>
             <p class="paragraph-small" style="">
               <ul>
                 <h4 style="background-color:#f99436">New SQL operators</h4>
@@ -83,15 +83,15 @@
                 <li>COUNT() - Returns the number of rows that matches a specified criteria.</li>
                 <li>GROUP BY - Used with aggregate functions to group the result set</li>
                 <li>% - Refers to any length string, can be prefaced</li>
-                <li>* - Refers to </li>
-                <li>_ - represents any one character</li>
+                <li>* -Wildcard - will select everything matching the pattern </li>
+                <li>_ - Represents any one character</li>
               </ul>
             </p>
             <p class="spacing-small">
               <img src=../img/img_innerjoin.gif><br><br>
               Inner joins return a set of results where both tables match. Other joins exist
               for both left and right, however are not needed for the exam.<br><br>
-              <img src=../img/innerjoin.png>
+              <img src=../img/innerjoin.png width="80%">
             </p>
 
             <h2>Referrantial Integrity</h2>
@@ -104,7 +104,58 @@
                 In many systems, deletion is avoided all together and a "deleted" column is added to
                 the table. This way, items can be marked as deleted without actually deleting them and causing conflicts.
             </p>
+            <hr>
+            <h2>Database transactions</h2>
+            <p class="spacing-small">
+              Transactions are how actions are carried out in databases. Each transaction follows the following procedure.
+              The transaction begins and is active. It then begins to carry out actions until all are comitted. Once this
+              happens, the changes are comitted and the transaction ends. If at any point during the process an action
+              fails, the entire transaction is aborted and no changes are comitted. The transaction then ends. This
+              must be guaranteed in any situation, including crashes and power failures and is reffered to as <b>atomicity</b><br><br>
+
+              <img src="../img/transaction.png" width="100%">
+            </p>
+            <h3> Principles of database transactions</h3>
+            <p class="paragraph-small" style="">
+              <ul>
+                <h4 style="background-color:#f99436">The ACID Principle</h4>
+                <li><b>A</b> - Atomicity: Transactions should be all or nothing</li>
+                <li><b>C</b> - Consistency: All rules of the database must be followed</li>
+                <li><b>I</b> - Isolation: The order of transactions shouldn't matter</li>
+                <li><b>D</b> - Durability: A comitted transaction must stay comitted</li>
+              </ul>
           </p>
+          <p class="spacing-small">
+            Atomicity requires that each transaction be "all or nothing“: if one part of the
+            transaction fails, then the entire transaction fails, and the database state is left
+            unchanged.
+            An atomic system must guarantee atomicity in each and every situation, including
+            power failures, errors and crashes.
+            To the outside world, a committed transaction appears (by its effects on the
+            database) to be indivisible ("atomic"), and an aborted transaction does not
+            happen.<br><br>
+            The consistency property ensures that any transaction will bring the database from
+            one valid state to another.
+            Any data written to the database must be valid according to all defined rules,
+            including constraints, cascades. triggers, and any combination thereof.
+            This does not guarantee correctness of the transaction in all ways the application
+            programmer might have wanted (that is the responsibility of application-level
+            code), but merely that any programming errors cannot result in the violation of any
+            defined rules.<br><br>
+            The isolation property ensures that the concurrent execution of transactions
+            results in a system state that would be obtained if transactions were executed
+            sequentially, i.e., one after the other.
+            Providing isolation is the main goal of concurrency control.
+            Depending on the concurrency control method (i.e., if it uses strict - as opposed to
+            relaxed - serializability), the effects of an incomplete transaction might not even be
+            visible to another transaction.<br><br>
+            The durability property ensures that once a transaction has been committed, it will
+            remain so, even in the event of power loss, crashes, or errors.
+            In a relational database, for instance, once a group of SQL statements execute,
+            the results need to be stored permanently (even if the database crashes
+            immediately thereafter).
+            To defend against power loss, transactions (or their effects) must be recorded in a
+            non-volatile memory.
         </div>
       </div>
     </div>
