Basic layout for RevPages > GPUs, fixed titles

--- a/RevisionPages/Processing.html
+++ b/RevisionPages/Processing.html
@@ -32,26 +32,13 @@
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2 ">
           <h2 style="padding-top:50px;">GPUs</h2>
-
-          <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
-                </a>
           <p>
-            <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
-                    The act makes it illegal to carry out any of the following:</h3>
+            <h3>GPUs are much faster than CPUs at completing repetitive tasks.<br>
+                This makes them invaluable for things like rendering graphics,<br>
+                or carrying out algorithms.
+            </h3>
           </p>
-          <ol class="row text-left">
-            <li>Unauthorised access to computer material</li>
-            <li>Unauthorised access with intent to commit or facilitate a crime</li>
-            <li>Unauthorised modification of computer material</li>
-            <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
-          </ol>
-          <p class="spacing-small">
-            The act works in tiers, so each act has more severe consequences than the last. For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br> Before 1990, there was no protection
-            against data theft or modification, meaning there was nothing that could be done <br> to punish cyber criminals. This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn
-            more.
-          </p>
-
+              <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT3VkS91vE5JLGBntQgC01ZHSF2CJowXQqDvVjlCFnkOD7uhZFeAWhFNatiNta5364vNGS_Egzj_n0l/embed?start=true&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
         </div>
       </div>
     </div>
