--- a/RevisionPages/Connectivity.html
+++ b/RevisionPages/Connectivity.html
@@ -3,6 +3,7 @@
 
 <head>
   <link type="text/css" href="../css/style.css" rel="stylesheet" />
+  <title>Connectivity</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
