--- a/RevisionPages/index.html
+++ b/RevisionPages/index.html
@@ -4,6 +4,7 @@
 <head>
   <link type="text/css" href="../css/style.css" rel="stylesheet" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <title>A2 Computer Science</title>
 </head>
 
 <body>
