Added to Connectivity > Web Technologies

--- a/RevisionPages/Connectivity.html
+++ b/RevisionPages/Connectivity.html
@@ -122,24 +122,31 @@
       <div class="row text-center">
         <div class="col-md-12">
           <h2>Web Technologies</h2>
-          <p>
-            <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
-            <ul class="row text-left">
-              <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-              <li>Personal data can be held only for specified and lawful purposes </li>
-              <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-              <li>Personal data should be accurate and kept up-to-date </li>
-              <li>Personal data should not be kept for longer than is necessary </li>
-              <li>Data must be processed in accordance with the rights of the data subject </li>
-              <li>Appropriate security measures must be taken against unauthorised access </li>
-              <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
-            </ul>
-            The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br> This includes racial or ethnic origin, political opinions and religious beliefs, among
-            the obvious such as name and address. In some cases, collection<br> of such material may be required, for example, a Catholic school who only employs Catholics, might wish to know the religious beliefs of new teachers, while<br> The police
-            force will need to know if new recruits have any previous criminal convictions.
-          </p>
-        </div>
+            <h3>Search Engines</h3>
+            <h4 style="background-color:#7768e8">A few videos explaining how search engines handle data</h4>
+            <div id="container">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/vrjAIBgxm_w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/v7n7wZhHJj8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+              <div class="paragraph-small">
+                <p>
+                Search engines function using a huge variety of techniques. Websites are given a score based on their relevance. This score is based on many factors, including things such as the number of links it displays, the number of times other pages link to it, the user activity and information relevance. For example, a page with out of date information that is linked to by few other sites will receive a low page ranking.
+                <br><br>
+                A lot of these statistics are determined using web crawlers. These are algorithms that scan the source code of websites. They look for things such as metadata, which provides information about the site, as well as following links to potential new sites.
+                <br><br>
+                Searching for web pages involves using the page rank, but also other strategies. One of these is TF-IDF (Term Frequency - Inverse Document Frequency), which takes first looks for the number of times each searched term appears on each result. The more times a word appears, the higher the score. However, some words are less meaningful than others, so to combat this, the number of occurrences of each word is divided by the number of webpages it appears on. For example, if “grass” appears six times in a page, but appears on six pages, the page score would only be one. This creates a more balanced algorithm, as many words can be common and simultaneously irrelevant to the search.
+                <br><br>
+                When searching, different engines use different combinations of these methods to return accurate results. For example, a high page ranking means nothing if the page does not match at all what the user searched for. Therefore different ‘weights’ are applied to each factor, along with others such as mobile friendliness and page age.
+                <br><br>
+                Over time, the search engine can build up a profile about the user, and begin suggesting more relevant results. For example, location services can be used to return sites closer to the user. As the search engine begins to create a picture of the user, their interests and frequent searches can help identify useful topics.
+                <br><br>
+                In order to test new algorithms and methods, large companies can deploy these features to small sections of their user base. If they are more successful, these changes can be rolled out across the board to further evolve the machine.
+                <br><br>
+                Overall, search engines make use of a variety of techniques to display the most valid and accurate set of results matching the user’s request.
 
+            </div>
+
+        </div>
       </div>
     </div>
   </section>
